--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-autoparsed-address-field
-version = 0.1.6
+version = 1.0.0
 description = A Django package to manage and parse addresses with geocoding support.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -34,6 +34,8 @@ install_requires =
     geopy>=2.4.1
     usaddress-scourgify>=0.6.0
     uszipcode>=1.0.1
+    sqlalchemy-mate==1.4.28.4
+    python-Levenshtein>=0.26.1
 
 [options.packages.find]
 exclude =
