--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-autoparsed-address-field
-version = 1.0.1
+version = 1.0.2
 description = A Django package to manage and parse addresses with geocoding support.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -23,6 +23,8 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
